[project]
name = "abr-out"
version = "0.1.0"
description = "Telegram V2Ray outbound marketplace"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.15.0",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1",
    "redis==5.2.1",
    "apscheduler==3.11.0",
    "loguru==0.7.3",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
